--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "formationAngularJsSolution",
+  "name": "AngularJSVrac",
   "version": "0.0.1",
   "repository": "",
   "dependencies": {
